# pyblinker

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: unit-tests.yml
paper/: paper.bib  paper.md
pyblinker/: __init__.py  pipeline.py  pipeline_steps.py  segment_blink_properties.py
pyblinker/blink_features/: __init__.py
pyblinker/blinker/: __init__.py  base_left_right.py  blink_epoch_mapper.py  default_setting.py  fit_blink.py  get_blink_positions.py  get_representative_channel.py  pyblinker.py  zero_crossing.py
pyblinker/ear/: __init__.py  algos_adaptive.py  algos_calibrated.py  blink_epoch_mapper.py  calibration.py  registry.py
pyblinker/epoch_features/: __init__.py
pyblinker/features/: __init__.py
pyblinker/fitutils/: __init__.py  forking.py  line_intersection.py
pyblinker/utils/: __init__.py  _logging.py  blink_metadata.py  blink_refinement_helpers.py  blink_statistics.py  epochs.py  misc.py  open_eye_baseline.py  raw_preprocessing.py  report.py  (+3 more)
refine_annotation/: util.py
test/: run_all_features_test.py  run_all_migration_test.py  run_all_right_base_test.py  run_all_test.py  test_download_migration_files.py  test_download_test_files.py
tutorial/: 1_basic_usage.py  2_MNE_approach_find_blink.py  eeg_feature_extraction_tutorial.py  epoching_and_blink_validation_report.py
unit_test/: __init__.py  data_setup.py  run_all_features_test.py  run_all_migration_test.py  run_all_right_base_test.py  run_all_test.py  test_download_migration_files.py  test_download_test_files.py
(+299 files in other folders)
