[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyblinker"
version = "0.0.1"
requires-python = ">=3.10"
authors = [{email = "balandongiv@gmail.com", name = "rpb"}]
description = "An open-source alternative to MATLAB BLINKER, integrated with MNE-Python, supporting multimodal biosignal research with flexible workflows, reproducible metrics, and enhanced accessibility."
readme = "README.md"
license = { text = "BSD-3-Clause" }
dependencies = [
    "mne",
    "pandas",
    "tqdm",
    "PyWavelets",
    "gdown",
    "seaborn",
]

[tool.setuptools.packages.find]
include = ["pyblinker*"]
